--- a/app/src/main/res/drawable/button_rounded.xml
+++ b/app/src/main/res/drawable/button_rounded.xml
@@ -8,10 +8,8 @@
         android:color="#757575" />
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimaryDark"
-        android:type="linear"
-        android:angle="90"/>
-
-
+        android:angle="90"
+        android:endColor="?attr/colorPrimary"
+        android:startColor="?attr/colorPrimary"
+        android:type="linear" />
 </shape>
