--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -23,5 +23,26 @@
 
     <include layout="@layout/content_item_detail" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddReview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="90dp"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:src="@drawable/vector_add_review"
+        android:visibility="invisible"
+        app:backgroundTint="?attr/colorPrimary"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/vector_plus"
+        app:backgroundTint="?attr/colorAccent" />
 
 </android.support.design.widget.CoordinatorLayout>
