--- a/app/src/main/res/layout/content_add_item.xml
+++ b/app/src/main/res/layout/content_add_item.xml
@@ -13,203 +13,96 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="30dp">
 
-        <TextView
-            android:id="@+id/textSNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Serial No :"
-            android:textColor="@color/primarytextBlack" />
-
-
-        <EditText
-            android:id="@+id/editSNo"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Serial No"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textDishId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Dish Id :"
-            android:textColor="@color/primarytextBlack" />
+            <EditText
+                android:id="@+id/editSNo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Serial No" />
 
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/editDishId"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="DishID"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textDishName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Dish Name :"
-            android:textColor="@color/primarytextBlack" />
+            <EditText
+                android:id="@+id/editDishId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Dish ID"
+                android:inputType="textCapSentences" />
 
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/editDishName"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Dish Name"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Price :"
-            android:textColor="@color/primarytextBlack" />
+            <EditText
+                android:id="@+id/editDishName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Dish Name"
+                android:inputType="textCapSentences" />
 
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/editPrice"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Price"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textQuantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Quantity :"
-            android:textColor="@color/primarytextBlack" />
+            <EditText
+                android:id="@+id/editPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Price" />
 
+        </android.support.design.widget.TextInputLayout>
 
-        <MultiAutoCompleteTextView
-            android:id="@+id/editQuantity"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Quantity"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Category :"
-            android:textColor="@color/primarytextBlack" />
+            <AutoCompleteTextView
+                android:id="@+id/autocompletetextCategory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Category"
+                android:inputType="textCapSentences" />
 
+        </android.support.design.widget.TextInputLayout>
 
-        <AutoCompleteTextView
-            android:id="@+id/autocompletetextCategory"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Category"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textTags"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Tags :"
-            android:textColor="@color/primarytextBlack" />
+            <EditText
+                android:id="@+id/editDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Description"
+                android:inputType="textCapSentences" />
 
+        </android.support.design.widget.TextInputLayout>
 
-        <MultiAutoCompleteTextView
-            android:id="@+id/multiautocompletetextTags"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Tags"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editImageUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Image URL" />
+
+        </android.support.design.widget.TextInputLayout>
 
 
         <Button
