--- a/app/src/main/res/layout/content_add_review.xml
+++ b/app/src/main/res/layout/content_add_review.xml
@@ -4,163 +4,176 @@
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-   >
+    android:background="@color/colorLightBG"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="30dp">
 
-        <TextView
-            android:id="@+id/textSNo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Serial No :"
-            android:textColor="@color/primarytextBlack" />
-
-
-        <EditText
-            android:id="@+id/editSNo"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Serial No"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editCustomerName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="20dp"
+                android:hint="Name" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <TextView
-            android:id="@+id/textDishId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Dish Id :"
-            android:textColor="@color/primarytextBlack" />
-
-
-        <EditText
-            android:id="@+id/editDishId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="DishID"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
-
-        <TextView
-            android:id="@+id/textCustomerId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Customer Id :"
-            android:textColor="@color/primarytextBlack" />
-
-
-        <EditText
-            android:id="@+id/editCustomerId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Customer Id"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
-
-        <TextView
-            android:id="@+id/textReview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Review :"
-            android:textColor="@color/primarytextBlack" />
-
-
-        <EditText
-            android:id="@+id/editReview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Enter Your Review"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
-
-        <TextView
-            android:id="@+id/textRatings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:text="Ratings :"
-            android:textColor="@color/primarytextBlack" />
+            android:textColor="@color/colorPrimaryText" />
 
-
-        <EditText
-            android:id="@+id/editRatings"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginStart="20dp"
-            android:background="@drawable/edittextstyle"
-            android:hint="Ratings"
-            android:padding="5dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textCursorDrawable="@drawable/cursor_color" />
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image10"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image20"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image30"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image40"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image50"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image60"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image70"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image80"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image90"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <ImageView
+                android:id="@+id/image100"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:background="@color/colorSecondaryText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textRatings"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="-" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editReview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="20dp"
+                android:hint="Review" />
+
+        </android.support.design.widget.TextInputLayout>
 
 
         <Button
+            android:id="@+id/addreview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="25dp"
-            android:backgroundTint="?attr/colorPrimary"
-            android:onClick="addreview"
+            android:background="@drawable/button_rounded"
+            android:onClick="submit"
             android:text="Add Review" />
 
     </LinearLayout>
