--- a/app/src/main/res/layout/content_menu_home.xml
+++ b/app/src/main/res/layout/content_menu_home.xml
@@ -13,5 +13,6 @@
         android:id="@+id/menu_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/menu_list"/>
+        android:background="@color/colorLightBG"
+        tools:listitem="@layout/menu_list" />
 </LinearLayout>
