--- a/app/src/main/res/layout/fragment_admin_cash_home.xml
+++ b/app/src/main/res/layout/fragment_admin_cash_home.xml
@@ -108,7 +108,7 @@
                         android:layout_height="15dp"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="2dp"
-                        android:background="#66ffff" />
+                        android:src="@drawable/vector_arrow_grey" />
 
                     <TextView
                         android:id="@+id/textYesterdayGrowth"
@@ -174,7 +174,7 @@
                         android:layout_height="15dp"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="2dp"
-                        android:background="#66ffff" />
+                        android:src="@drawable/vector_arrow_grey" />
 
                     <TextView
                         android:id="@+id/textThisMonthGrowth"
@@ -239,7 +239,7 @@
                         android:layout_height="15dp"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="2dp"
-                        android:background="#66ffff" />
+                        android:src="@drawable/vector_arrow_grey" />
 
                     <TextView
                         android:id="@+id/textLastMonthGrowth"
