--- a/app/src/main/res/layout/cashier_list.xml
+++ b/app/src/main/res/layout/cashier_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
@@ -40,6 +40,16 @@
                     android:layout_gravity="center_vertical"
                     android:text="BillNo" />
 
+                <TextView
+                    android:id="@+id/textTableNo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:text="Table No" />
+
 
             </RelativeLayout>
 
@@ -54,7 +64,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/cashier_list_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingTop="2dp" />
 
