--- a/app/src/main/res/layout/content_item_detail.xml
+++ b/app/src/main/res/layout/content_item_detail.xml
@@ -16,9 +16,9 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/DishImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="@drawable/rice"
             android:scaleType="fitXY" />
 
         <android.support.v7.widget.CardView
@@ -134,17 +134,17 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
-                    android:text="Spicy Level"
+                    android:text="Price"
                     android:textColor="@color/colorItemText" />
 
                 <TextView
-                    android:id="@+id/textSpicyLevel"
+                    android:id="@+id/textPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:text="RATING"
+                    android:text="$$$"
                     android:textColor="@color/colorItemText" />
 
             </RelativeLayout>
