--- a/app/src/main/res/layout/content_add_item.xml
+++ b/app/src/main/res/layout/content_add_item.xml
@@ -85,10 +85,11 @@
 
             <EditText
                 android:id="@+id/editDescription"
+                android:maxEms="15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Description"
-                android:inputType="textCapSentences" />
+                android:inputType="textCapSentences|textMultiLine" />
 
         </android.support.design.widget.TextInputLayout>
 
