--- a/app/src/main/res/layout/content_shopping_cart.xml
+++ b/app/src/main/res/layout/content_shopping_cart.xml
@@ -58,7 +58,7 @@
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/order_list_recycler"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             tools:listitem="@layout/order_list" />
                     </RelativeLayout>
 
