--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -15,7 +15,8 @@
             android:id="@+id/welcomebackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            />
     </LinearLayout>
 
 
@@ -32,6 +33,28 @@
             android:layout_marginTop="90dp"
             android:onClick="icon"
             android:src="@drawable/cookbook" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
+
+        </RelativeLayout>
+
 
         <Button
             android:id="@+id/buttonDineIn"
@@ -100,6 +123,7 @@
                 android:layout_alignStart="@+id/radioButton2"
                 android:layout_below="@+id/radioButton2"
                 android:text="TABLE 4" />
+
 
         </RadioGroup>
 
