--- a/app/src/main/res/layout/kitchen_list.xml
+++ b/app/src/main/res/layout/kitchen_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
@@ -63,7 +63,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/kitchen_list_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingTop="2dp" />
 
